aprendendo array e dicionário

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <script>
-            alert(frase);
+       //     alert(frase);
         </script>
         <h1>Minha Página</h1>
     </body>
